# Synapse

./: .gitignore  pyproject.toml
src/: main.py
src/synapse/: voice_agent.py
src/synapse/chatbot/: simple.py
src/synapse/chatbot/engines/: generator.py  huggingface.py  openai.py  types.py  utils.py
src/synapse/chatbot/states/: __init__.py  global_transcript.py
src/synapse/config/: __init__.py
src/synapse/pipeline/sinks/: __init__.py  common.py  speaker.py
src/synapse/pipeline/sources/: __init__.py  common.py  mic.py
src/synapse/pipeline/streamers/: common.py  types.py
src/synapse/processors/: __init__.py  ai_transcript.py  nlp.py
src/synapse/stt/: deepgram.py
src/synapse/tts/: elevenlabs.py  kokoro.py  utils.py
src/synapse/utils/: __init__.py  stream2sentence.py
